improved threading, added comments, and streamlined console output

--- a/rich/rich.vcxproj
+++ b/rich/rich.vcxproj
@@ -190,6 +190,9 @@
     <ClInclude Include="user_manager.h" />
     <ClInclude Include="voice_manager.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
