--- a/rich/rich.vcxproj.filters
+++ b/rich/rich.vcxproj.filters
@@ -114,4 +114,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
 </Project>
