--- a/rich/rich.vcxproj
+++ b/rich/rich.vcxproj
@@ -78,6 +78,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Users\Peter\source\repos\bocw\rich\rich;$(IncludePath)</IncludePath>
+    <ReferencePath>C:\Users\Peter\source\repos\bocw\rich\rich;$(ReferencePath)</ReferencePath>
+    <ExecutablePath>C:\Users\Peter\source\repos\bocw\rich\rich;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -114,6 +117,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>C:\Users\Peter\source\repos\bocw\rich\lib\discord_game_sdk.dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
